# the-usual

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RTK.md  pyproject.toml  run-client.bat
.github/workflows/: ci.yml  pages.yml
assets/client/: PROVENANCE.md
assets/content/conducts/: human.ron
assets/content/maps/: cottage.ron
assets/content/objects/: cottage.ron
assets/content/people/: newcomers.ron
assets/content/plans/: toilet_need.ron
assets/content/scenarios/: cottage_arrival.ron
crates/village_game/: Cargo.toml
crates/village_game/src/: main.rs
crates/village_sim/: Cargo.toml
crates/village_sim/src/: lib.rs
pasm/spec/: README.md
pasm/spec/core/: decisions.yaml  foundation.yaml
pasm/spec/milestones/: milestone-2-first-friday.yaml  milestone-3-social-persistence.yaml  milestone-4-initiatives.yaml
pasm/spec/mvp/: cottage-arrival.yaml
pasm/spec/roadmap/: roadmap.yaml
pasm/spec/setting/: setting-guide.yaml
web/: index.html
